[gd_scene load_steps=4 format=3 uid="uid://bjxxrcwxxi54m"]

[ext_resource type="Script" uid="uid://kee165voj0s1" path="res://menu/main_manu.gd" id="1_lak45"]

[sub_resource type="Gradient" id="Gradient_lak45"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n4o47"]
gradient = SubResource("Gradient_lak45")

[node name="MainManu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lak45")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_n4o47")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
